Bug 352526 - 3D graph ->views not working
Summary: 3D graph ->views not working
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-10 16:56 UTC by B.Prathibha
Modified: 2016-10-25 01:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
3dgraph-views (22.78 KB, text/plain)
2015-09-10 16:57 UTC, B.Prathibha
Details
kalgebra.zip (2.26 MB, application/zip)
2015-09-11 08:51 UTC, B.Prathibha
Details
attachment-5189-0.html (2.00 KB, text/html)
2015-09-11 09:28 UTC, B.Prathibha
Details
kalgebra-3d-graph.zip (14.69 KB, application/zip)
2015-09-11 13:40 UTC, B.Prathibha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description B.Prathibha 2015-09-10 16:56:54 UTC
Kalgebra -> 3D Graph ->Dots. No change seen on the 3D graph.

Reproducible: Always

Steps to Reproduce:
1.Open Kalgebra application. 
2.Click the 3D Graph tab.
3.In the expression bar, enter the expression as
     sin(x)*sin(y)
   Press Enter.
3. Click the menu, 
   3D Graph -> Dots 
   or
   3D Graph -> Lines
   or
   3D Graph -> Solid  


Actual Results:  
No change on the graph.

Expected Results:  
 The graph for the entered expression should be displayed in dots, lines or solid.
Comment 1 B.Prathibha 2015-09-10 16:57:18 UTC
Created attachment 94501 [details]
3dgraph-views
Comment 2 Aleix Pol 2015-09-11 08:17:18 UTC
I cannot reproduce.

I'm unsure what the patch means, you think this patch makes it work?
Comment 3 B.Prathibha 2015-09-11 08:51:06 UTC
Created attachment 94504 [details]
kalgebra.zip

Yes.  Please check with the attached deb.

On September 11, 2015 at 1:47 PM Aleix Pol <aleixpol@kde.org> wrote:
> https://bugs.kde.org/show_bug.cgi?id=352526
>
> --- Comment #2 from Aleix Pol <aleixpol@kde.org> ---
> I cannot reproduce.
>
> I'm unsure what the patch means, you think this patch makes it work?
>
> --
> You are receiving this mail because:
> You reported the bug.
> You are on the CC list for the bug.
Regards,
Prathibha
Senior Engineer
CDAC Chennai
-------------------------------------------------------------------------------------------------------------------------------
[ C-DAC is on Social-Media too. Kindly follow us at:
Facebook: https://www.facebook.com/CDACINDIA & Twitter: @cdacindia ]

This e-mail is for the sole use of the intended recipient(s) and may
contain confidential and privileged information. If you are not the
intended recipient, please contact the sender by reply e-mail and destroy
all copies and the original message. Any unauthorized review, use,
disclosure, dissemination, forwarding, printing or copying of this email
is strictly prohibited and appropriate legal action will be taken.
-------------------------------------------------------------------------------------------------------------------------------
Comment 4 Aleix Pol 2015-09-11 09:03:01 UTC
I'm sorry, cannot use deb.
Comment 5 B.Prathibha 2015-09-11 09:28:46 UTC
Created attachment 94506 [details]
attachment-5189-0.html

i'll patch it in the latest source available in git and mail the same.

Is it possible for me as an anonymous user to commit in kde git repo? If so,
will do the changes and commit it.

On September 11, 2015 at 2:33 PM Aleix Pol <aleixpol@kde.org> wrote:
> https://bugs.kde.org/show_bug.cgi?id=352526
>
> --- Comment #4 from Aleix Pol <aleixpol@kde.org> ---
> I'm sorry, cannot use deb.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
> You reported the bug.
Regards,
Prathibha
Senior Engineer
CDAC Chennai
-------------------------------------------------------------------------------------------------------------------------------
[ C-DAC is on Social-Media too. Kindly follow us at:
Facebook: https://www.facebook.com/CDACINDIA & Twitter: @cdacindia ]

This e-mail is for the sole use of the intended recipient(s) and may
contain confidential and privileged information. If you are not the
intended recipient, please contact the sender by reply e-mail and destroy
all copies and the original message. Any unauthorized review, use,
disclosure, dissemination, forwarding, printing or copying of this email
is strictly prohibited and appropriate legal action will be taken.
-------------------------------------------------------------------------------------------------------------------------------
Comment 6 Aleix Pol 2015-09-11 09:31:38 UTC
Hi, thanks.

I can commit them for you, if you don't want to do it as yourself.
Comment 7 B.Prathibha 2015-09-11 13:34:01 UTC
Committed the changes in git.

Revision and comment:

[master 4f6a5f2] Patch added for 3D Graph->Reset View, Dots, Lines, Solid

Attachment: Updated source.

On September 11, 2015 at 3:01 PM Aleix Pol <aleixpol@kde.org> wrote:
> https://bugs.kde.org/show_bug.cgi?id=352526
>
> --- Comment #6 from Aleix Pol <aleixpol@kde.org> ---
> Hi, thanks.
>
> I can commit them for you, if you don't want to do it as yourself.
>
> --
> You are receiving this mail because:
> You reported the bug.
> You are on the CC list for the bug.
Regards,
Prathibha
Senior Engineer
CDAC Chennai
-------------------------------------------------------------------------------------------------------------------------------
[ C-DAC is on Social-Media too. Kindly follow us at:
Facebook: https://www.facebook.com/CDACINDIA & Twitter: @cdacindia ]

This e-mail is for the sole use of the intended recipient(s) and may
contain confidential and privileged information. If you are not the
intended recipient, please contact the sender by reply e-mail and destroy
all copies and the original message. Any unauthorized review, use,
disclosure, dissemination, forwarding, printing or copying of this email
is strictly prohibited and appropriate legal action will be taken.
-------------------------------------------------------------------------------------------------------------------------------
Comment 8 B.Prathibha 2015-09-11 13:40:10 UTC
Created attachment 94509 [details]
kalgebra-3d-graph.zip

 As the full source size exceeds the limit, attached only the updated files.

This also includes the patch for

"Resolving the ambiguity in keyboard shortcuts for save".


On September 11, 2015 at 3:01 PM Aleix Pol <aleixpol@kde.org> wrote:
> https://bugs.kde.org/show_bug.cgi?id=352526
>
> --- Comment #6 from Aleix Pol <aleixpol@kde.org> ---
> Hi, thanks.
>
> I can commit them for you, if you don't want to do it as yourself.
>
> --
> You are receiving this mail because:
> You reported the bug.
> You are on the CC list for the bug.
Regards,
Prathibha
Senior Engineer
CDAC Chennai
-------------------------------------------------------------------------------------------------------------------------------
[ C-DAC is on Social-Media too. Kindly follow us at:
Facebook: https://www.facebook.com/CDACINDIA & Twitter: @cdacindia ]

This e-mail is for the sole use of the intended recipient(s) and may
contain confidential and privileged information. If you are not the
intended recipient, please contact the sender by reply e-mail and destroy
all copies and the original message. Any unauthorized review, use,
disclosure, dissemination, forwarding, printing or copying of this email
is strictly prohibited and appropriate legal action will be taken.
-------------------------------------------------------------------------------------------------------------------------------
Comment 9 Maximiliano Curia 2016-10-24 08:40:33 UTC
This issue is still reproducible. It seems that the analitza 3d backend is missing an update after setting the plotstyle.
Maybe this report needs to be reassigned to analitza.
Comment 10 Aleix Pol 2016-10-25 01:46:35 UTC
Git commit 9669ef43bdd73543509317b10de56493faf250db by Aleix Pol.
Committed on 25/10/2016 at 01:45.
Pushed by apol into branch 'Applications/16.08'.

Fix regressed feature

Support wireframe and dots plotting styles

M  +17   -0    analitzaplot/plotter3d.cpp
M  +1    -1    analitzaplot/plotter3d.h

http://commits.kde.org/analitza/9669ef43bdd73543509317b10de56493faf250db