Fix regressed feature

Support wireframe and dots plotting styles

BUG: 352526